--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -9,71 +9,16 @@
                 <div class="col-md-10 mx-auto">
                     <h1 class="font-weight-bold display-4 mt-2 ml-3 mb-5">Create your account.</h1>
 
-                    <form name="register" method="post" novalidate="">
-                        <div id="register" novalidate="">
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-2 required" for="register_firstName">First name</label>
-                                <div class="col-sm-10">
-                                    <input type="text" id="register_firstName" name="register[firstName]" required="required" maxlength="50" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-2 required" for="register_lastName">Last name</label>
-                                <div class="col-sm-10">
-                                    <input type="text" id="register_lastName" name="register[lastName]" required="required" maxlength="100" pattern=".{2,}" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-2 required" for="register_email">Email</label>
-                                <div class="col-sm-10">
-                                    <input type="email" id="register_email" name="register[email]" required="required" maxlength="255" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-2" for="register_phone">Phone</label>
-                                <div class="col-sm-10">
-                                    <input type="text" id="register_phone" name="register[phone]" maxlength="15" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-2 required" for="register_password_first">Password</label>
-                                <div class="col-sm-10">
-                                    <input type="password" id="register_password_first" name="register[password][first]" required="required" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-2 required" for="register_password_second">Confirm password</label>
-                                <div class="col-sm-10">
-                                    <input type="password" id="register_password_second" name="register[password][second]" required="required" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <div class="col-sm-2"></div>
-                                <div class="col-sm-10">
-                                    <div class="form-check">
-                                        <input type="checkbox" id="register_terms" name="register[terms]" required="required" class="form-check-input" value="1"/>
-                                        <label class="form-check-label required" for="register_terms">Click here to indicate that you have read and agree to the terms presented in the Terms and Conditions agreement</label>
-                                    </div>
-                                    <small id="register_terms_help" class="form-text text-muted">Your email and information are used to allow you to sign in securely and access your data. SensioTV records certain usage data for security, support and reporting purposes.</small>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <div class="col-sm-2"></div>
-                                <div class="col-sm-10">
-                                    <button type="submit" id="register_register" name="register[register]" class="btn-primary btn">Create your SensioTV account</button>
-                                </div>
-                            </div>
-
-                            <input type="hidden" id="register__token" name="register[_token]" value="229c0bd9b2bb.Sw4ofV51_rrW1FWIyVZ0ibHx2CiAuo1eMVOmFvDfZTo.P35YNhI9iMqhhTK4o2UxzOGwiRzXyOQWXz3kXZG2D1gnb0s4OTbG8ODmJg"/>
-                        </div>
-                    </form>
+                    {{ form_errors(form) }}
+                    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+                        {{ form_row(form.firstname) }}
+                        {{ form_row(form.lastname) }}
+                        {{ form_row(form.email) }}
+                        {{ form_row(form.phone) }}
+                        {{ form_row(form.password) }}
+                        {{ form_row(form.tos) }}
+                    {{ form_rest(form) }}
+                    {{ form_end(form) }}
 
                     <div class="mt-4">
                         <p>
