--- a/templates/movie/search.html.twig
+++ b/templates/movie/search.html.twig
@@ -71,7 +71,9 @@
                                     <tr>
                                         <td><img src="{{ movie.Poster }}" width="45" height="67" alt="{{ movie.Title }}"></td>
                                         <td>{{ movie.Title }} <span class="text-muted">({{ movie.Year }})</td>
-                                        <td><a href="/movie/{{ movie.imdbID }}/import" title="Import movie data from IMDB into database"><i class="far fa-arrow-alt-circle-down"></i></a></td>
+                                        <td>
+                                            <a href="/movie/{{ movie.imdbID }}/import" title="Import movie data from IMDB into database"><i class="far fa-arrow-alt-circle-down"></i></a>
+                                        </td>
                                     </tr>
                                 {% endfor %}
                             {% endif %}
