--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -24,7 +24,7 @@
                         <p>
                             <a href="/password-recovering.html" title="Get a new password sent by email">Forgotten your password ? <i class="far fa-arrow-alt-circle-right"></i></a>
                             <br>
-                            <a href="/login" title="Log in to your SensioTV account">You have an account ? Log in now. <i class="far fa-arrow-alt-circle-right"></i></a>
+                            <a href="{{ path('auth.login') }}" title="Log in to your SensioTV account">You have an account ? Log in now. <i class="far fa-arrow-alt-circle-right"></i></a>
                         </p>
                     </div>
 
