--- a/templates/movie/latest.html.twig
+++ b/templates/movie/latest.html.twig
@@ -47,12 +47,12 @@
 {#                        {{ macro.render_imported_movie(movie) }}#}
                         <div class="row">
                             <div class="col-lg-3">
-                                <a href="/movie/{{ movie.id }}" title="{{ movie.title }}" class="album-link">
+                                <a href="{{ path('movie.show', { id: movie.id }) }}" title="{{ movie.title }}" class="album-link">
                                     <img height="209" width="140" src="{{ movie.poster}}">
                                 </a>
                             </div>
                             <div class="col-lg-9">
-                                <a href="/movie/{{ movie.id }}" title="Click to see the movie details">
+                                <a href="{{ path('movie.show', { id: movie.id }) }}" title="Click to see the movie details">
                                     <h6 class="m-1 font-weight-bold">
                                         {{ movie.title }}
                                     </h6>
