--- a/templates/movie/search.html.twig
+++ b/templates/movie/search.html.twig
@@ -72,7 +72,10 @@
                                         <td><img src="{{ movie.Poster }}" width="45" height="67" alt="{{ movie.Title }}"></td>
                                         <td>{{ movie.Title }} <span class="text-muted">({{ movie.Year }})</td>
                                         <td>
-                                            <a href="/movie/{{ movie.imdbID }}/import" title="Import movie data from IMDB into database"><i class="far fa-arrow-alt-circle-down"></i></a>
+                                            {% if is_granted('ROLE_MOVIE_IMPORT') %}
+                                                <a href="{{ path('movie.import', { imdbID: movie.imdbID }) }}" title="Import movie data from IMDB into database"><i class="far fa-arrow-alt-circle-down"></i></a>
+                                            {% endif %}
+                                            <a style="padding-left: 3px" href="https://www.imdb.com/title/{{ movie.imdbID }}/" target="_blank" title="Show movie on IMDB"><i class="far fa-eye"></i></a>
                                         </td>
                                     </tr>
                                 {% endfor %}
