--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -6,9 +6,9 @@
                 <li><a class="text-muted" href="/" title="Back to the homepage">Home</a></li>
                 <li><a class="text-muted" href="/movie/top-rated" title="Get all top rated movies">Top Rated</a></li>
                 <li><a class="text-muted" href="/movie/genres" title="Find your movie by genre">Browse By Genre</a></li>
-                <li><a class="text-muted" href="/movie/latest" title="Get all new movies">Latest</a></li>
+                <li><a class="text-muted" href="{{ path('movie.latest') }}" title="Get all new movies">Latest</a></li>
                 <li><a class="text-muted" href="/contact" title="You need some help ?">Help Center</a></li>
-                <li><a class="text-muted" href="/login" title="Register or log in">Log In</a></li>
+                <li><a class="text-muted" href="{{ path('auth.login') }}" title="Register or log in">Log In</a></li>
             </ul>
         </div>
         <div class="col-sm-5">
