--- a/templates/_partials/header-nav.html.twig
+++ b/templates/_partials/header-nav.html.twig
@@ -1,6 +1,8 @@
+{% import 'macros.html.twig' as macros %}
+
 <header>
     <nav class="navbar navbar-dark navbar-expand-md fixed-top bg-dark justify-content-center">
-        <a class="navbar-brand mr-0" href="/">
+        <a class="navbar-brand mr-0" href="{{ path('home') }}">
             <img src="/assets/images/sensiotv-icon.png" alt="SensioTV Brand Icon"> <span class="color-green">TV+</span>
         </a>
 
@@ -9,19 +11,27 @@
         </button>
         <ul class="navbar-nav mx-auto text-center">
             <li class="nav-item">
-                <a class="nav-link" href="/" title="Back to the homepage">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path('home') }}" title="Back to the homepage">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/movie/search" title="Search">Search Movie</a>
+                <a class="nav-link" href="{{ path('movie.search') }}" title="Search">Search Movie</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/movie/latest" title="Search">Latest</a>
+                <a class="nav-link" href="{{ path('movie.latest') }}" title="Search">Latest</a>
             </li>
         </ul>
 
-        <ul class="navbar-nav text-center">
-            <li class="nav-item active"><a class="nav-link" href="/register" title="Register or log in"><i class="fas fa-plus-square"></i></a></li>
-            <li class="nav-item active"><a class="nav-link" href="/login" title="Register or log in"><i class="fas fa-user"></i></a></li>
-        </ul>
+{#        {{ macros.login_section() }}#}
+        {% if is_granted('ROLE_USER') %}
+            <span style="color: #fff">
+                Hi {{ app.user.firstName }} | <a href="{{ logout_path() }}">Logout <i class="fas fa-power-off"></i></a>
+                {% if app.user.lastLoginAt() is defined %} | last login: {{ app.user.lastLoginAt()|date }} {% endif %}
+            </span>
+        {% else %}
+            <ul class="navbar-nav text-center">
+                <li class="nav-item active"><a class="nav-link" href="{{ path('auth.register') }}" title="Register or log in"><i class="fas fa-plus-square"></i></a></li>
+                <li class="nav-item active"><a class="nav-link" href="{{ path('auth.login') }}" title="Register or log in"><i class="fas fa-user"></i></a></li>
+            </ul>
+        {% endif %}
     </nav>
 </header>
