--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -9,16 +9,16 @@
                 <div class="col-lg-5">
                     <h1 class="font-weight-bold display-4 mt-5 ml-2 mb-5">Log in to your account.</h1>
 
-                    <form class="form-signin" method="post" action="/login_check">
+                    <form class="form-signin" method="post" action="{{ path('auth.login') }}">
                         <div class="row">
                             <div class="col-12 m-2">
                                 <label for="_email" class="sr-only">Email address</label>
-                                <input type="email" id="_email" name="_email" class="form-control form-control-lg" placeholder="Email address" required autofocus>
+                                <input type="email" id="_email" name="_email" class="form-control form-control-lg" placeholder="Email address" value="dijyhoz@mailinator.com" required autofocus>
                             </div>
 
                             <div class="col-12 m-2">
                                 <label for="_password" class="sr-only">Password</label>
-                                <input type="password" id="_password" name="_password" class="form-control form-control-lg" placeholder="Password" required>
+                                <input type="password" id="_password" name="_password" class="form-control form-control-lg" placeholder="Password" value="password" required>
                             </div>
 
                             <div class="col-12 m-2">
@@ -38,7 +38,7 @@
                                 <p>
                                     <a href="/password-recovering.html" title="Get a new password sent by email">Forgotten your password ? <i class="far fa-arrow-alt-circle-right"></i></a>
                                     <br>
-                                    <a href="/register" title="Create an account to SensioTV">Don't have an account ? Create one now. <i class="far fa-arrow-alt-circle-right"></i></a>
+                                    <a href="{{ path('auth.register') }}" title="Create an account to SensioTV">Don't have an account ? Create one now. <i class="far fa-arrow-alt-circle-right"></i></a>
                                 </p>
                             </div>
                         </div>
