--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -23,7 +23,7 @@
                     <h3 class="font-weight-bold display-4">CINEMATIC.</h3>
                     <p class="display-4 font-weight-bold mb-5"><span class="text-muted">On all aspects. In every way.</span></p>
                     <p class="lead pt-5">Get inspired by the movies watched by your coworkers.</p>
-                    <a class="btn btn-outline-dark m-4" href="/register" title="Create an account and subscribe for one year">Register <i class="fas fa-plus"></i></a>
+                    <a class="btn btn-outline-dark m-4" href="{{ path('auth.register') }}" title="Create an account and subscribe for one year">Register <i class="fas fa-plus"></i></a>
                 </div>
                 <div class="col-lg-6">
                     <img class="img-fluid img-rounded" src="/assets/images/index-second-section.jpg" alt="SensioTV One Movie Sample">
@@ -41,89 +41,25 @@
             </div>
 
             <div class="row mb-3">
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img class="img-fluid img-rounded-top" src="/assets/images/movie-image-samples/memento.jpeg" alt="Memento Sample Image">
-                        <div class="card-body">
-                            <p class="font-weight-bold">Memento <span class="text-muted">(2000)</span> <small>- Christopher Nolan</small></p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <a href="/movie/1" class="btn btn-sm btn-dark" title="View in details">View</a>
-                                <small class="text-success"><i class="fas fa-clock"></i> 113 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img class="img-fluid img-rounded-top" src="/assets/images/movie-image-samples/insomnia.jpeg" alt="Insomnia Sample Image">
-                        <div class="card-body">
-                            <p class="font-weight-bold">Insomnia <span class="text-muted">(2002)</span> <small>- Christopher Nolan</small></p>
+                {% for movie in movies %}
+                    <div class="col-lg-4">
+                        <div class="card mb-4">
+                            <img class="img-fluid img-rounded-top" src="{{ movie.poster }}" alt="{{ movie.title }}">
+                            <div class="card-body">
+                                <p class="font-weight-bold">{{ movie.title }} <span class="text-muted">({{ movie.releaseDate|date('Y') }})</span></p>
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <a href="/movie/1" class="btn btn-sm btn-dark" title="View in details">View</a>
-                                    <small class="text-success"><i class="fas fa-clock"></i> 118 mins</small>
+                                    <a href="{{ path('movie.show', { id: movie.id }) }}" class="btn btn-sm btn-dark" title="View in details">View</a>
+                                    <small class="text-success"><i class="fas fa-clock"></i> {{ movie.duration }}</small>
                                 </div>
                             </div>
                         </div>
                     </div>
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img class="img-fluid img-rounded-top" src="/assets/images/movie-image-samples/the-dark-knight.jpeg" alt="The Dark Knight Sample Image">
-                        <div class="card-body">
-                            <p class="font-weight-bold">The Dark Knight <span class="text-muted">(2008)</span> <small>- Christopher Nolan</small></p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <a href="/movie/1" class="btn btn-sm btn-dark" title="View in details">View</a>
-                                <small class="text-success"><i class="fas fa-clock"></i> 152 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img class="img-fluid img-rounded-top" src="/assets/images/movie-image-samples/inception.jpeg" alt="Inception Sample Image">
-                        <div class="card-body">
-                            <p class="font-weight-bold">Inception <span class="text-muted">(2010)</span> <small>- Christopher Nolan</small></p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <a href="/movie/1" class="btn btn-sm btn-dark" title="View in details">View</a>
-                                <small class="text-success"><i class="fas fa-clock"></i> 148 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img class="img-fluid img-rounded-top" src="/assets/images/movie-image-samples/man-of-steel.jpeg" alt="Man Of Steel Sample Image">
-                        <div class="card-body">
-                            <p class="font-weight-bold">Man Of Steel <span class="text-muted">(2013)</span> <small>- Christopher Nolan</small></p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <a href="/movie/1" class="btn btn-sm btn-dark" title="View in details">View</a>
-                                <small class="text-success"><i class="fas fa-clock"></i> 143 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img class="img-fluid img-rounded-top" src="assets/images/movie-image-samples/dunkirk.jpeg" alt="Dunkirk Sample Image">
-                        <div class="card-body">
-                            <p class="font-weight-bold">Dunkirk <span class="text-muted">(2017)</span> <small>- Christopher Nolan</small></p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <a href="/movie/1" class="btn btn-sm btn-dark" title="View in details">View</a>
-                                <small class="text-success"><i class="fas fa-clock"></i> 106 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
 
             <div class="row">
                 <div class="col text-center m-5">
-                    <p><a href="/movie/latest" title="Click here to get more information">Watch all our latest movies <i class="far fa-arrow-alt-circle-right"></i></a></p>
+                    <p><a href="{{ path('movie.latest') }}" title="Click here to get more information">Watch all our latest movies <i class="far fa-arrow-alt-circle-right"></i></a></p>
                 </div>
             </div>
         </div>
